--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,18 +15,34 @@ services:
       - umami
 
   umami:
-    image: ghcr.io/maxime-j/umami-sqlite:latest
+    image: ghcr.io/umami-software/umami:postgresql-latest
     container_name: umami
     ports:
       - "3000:3000"
     env_file:
       - .env
     environment:
-      - DATABASE_URL=file:/data/umami.db
-      - DATABASE_TYPE=sqlite
+      - DATABASE_URL=postgresql://umami:${POSTGRES_PASSWORD}@db:5432/umami
       - APP_SECRET=${APP_SECRET}
+    depends_on:
+      db:
+        condition: service_healthy
+    restart: always
+
+  db:
+    image: postgres:15-alpine
+    container_name: umami-db
+    environment:
+      - POSTGRES_DB=umami
+      - POSTGRES_USER=umami
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     volumes:
-      - ./umami-data:/data
+      - umami-db-data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U umami -d umami"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
     restart: always
 
 volumes:
