--- a/.env.umami.example
+++ b/.env.umami.example
@@ -1,8 +1,5 @@
-# Umami Analytics Self-Hosting (PostgreSQL - Stable)
+# Umami Analytics Self-Hosting Configuration (SQLite)
 # Add these to your .env file
-
-# Database password for PostgreSQL
-POSTGRES_PASSWORD=replace_me_with_a_strong_password
 
 # Secret string used for signing Umami sessions
 APP_SECRET=replace_me_with_a_long_random_string_for_umami_secret
