--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,9 +21,7 @@ services:
       - "3000:3000"
     env_file:
       - .env
-    environment:
-      - DATABASE_URL=postgresql://umami:${POSTGRES_PASSWORD}@db:5432/umami
-      - APP_SECRET=${APP_SECRET}
+
     depends_on:
       db:
         condition: service_healthy
@@ -32,10 +30,11 @@ services:
   db:
     image: postgres:15-alpine
     container_name: umami-db
+    env_file:
+      - .env
     environment:
       - POSTGRES_DB=umami
       - POSTGRES_USER=umami
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     volumes:
       - umami-db-data:/var/lib/postgresql/data
     healthcheck:
