--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,10 @@ services:
   db:
     image: postgres:15-alpine
     container_name: umami-db
-    env_file:
-      - .env
     environment:
       - POSTGRES_DB=umami
       - POSTGRES_USER=umami
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     volumes:
       - umami-db-data:/var/lib/postgresql/data
     healthcheck:
@@ -29,22 +28,20 @@ services:
     environment:
       - FLASK_ENV=production
     depends_on:
-      - db
+      - umami
 
   umami:
     image: ghcr.io/umami-software/umami:postgresql-latest
     container_name: umami
     ports:
       - "3000:3000"
-    env_file:
-      - .env
-
+    environment:
+      - DATABASE_URL=postgresql://umami:${POSTGRES_PASSWORD}@db:5432/umami
+      - APP_SECRET=${APP_SECRET}
     depends_on:
       db:
         condition: service_healthy
     restart: always
-
-  
 
 volumes:
   umami-db-data:
